<resources>
    <string name="app_name" translatable="false">Gfrör.li</string>
    <string name="thermometer_icon_description">Thermometer icon</string>
    <string name="no_measurement">No current measurement</string>
    <string name="loading_data">Loading data…</string>

    <!-- Common -->
    <string name="temperature">Temperature</string>

    <!-- Activity titles -->
    <string name="activity_about">About</string>
    <string name="activity_map">Gfrör.li: Water Temperatures</string>

    <!-- Detail pane -->
    <string name="section_header_3days">History (last 3 days)</string>
    <string name="section_header_summary">Summary (all time)</string>
    <string name="section_header_sponsor">Sponsor: %1$s</string>
    <string name="section_header_data_source">Data Source: %1$s</string>
    <string name="sponsor_description_sponsor">This sensor is sponsored by \"%1$s\".</string>
    <string name="sponsor_description_partner">This sensor is operated by our partner \"%1$s\".</string>
    <string name="sponsor_description_public_data_provider">This sensor\'s data is obtained from a public data source provided by \"%1$s\".</string>
    <string name="chart_no_data">No data found</string>

    <!-- About activity -->
    <string name="version_heading">Version</string>
    <string name="version_text1">App version %1$s (build %2$d).</string>
    <string name="about_project_heading">Why this app?</string>
    <string name="about_project_text1">The water temperature is a value relevant to a lot of people: Swimmers, divers, fishermen, and many others. But until now, in Switzerland, there were often no reliable ways to get real time information about the water temperature in the area you\'re interested in.</string>
    <string name="about_project_text2">We are building a network of community-operated low-cost low-energy water temperature sensors. This allows us to measure the water temperature locally and to show it to you in real time, for free.</string>
    <string name="about_project_text3">Additionally, we are integrating public temperature measurement stations (like river temperatures from the Swiss FOEN) where the license permits us to do so. (Disclaimer: Gfrörli is not a government project, but a community project unaffiliated with government. We simply consume public data sources.)</string>
    <string name="about_project_text4">Find more information about this project: https://gfrör.li/</string>
    <string name="about_us_heading">Who made this app?</string>
    <string name="about_us_text1">This app and the server infrastructure is developed and operated by the Coredump hackerspace in Rapperswil-Jona.</string>
    <string name="about_us_text2">Find more information about us on our website: https://www.coredump.ch/</string>
    <string name="open_source_heading">Open Source</string>
    <string name="open_source_text1">This app is open source under the GPL license! You can find the code on GitHub: https://github.com/gfroerli/app-android Contributions are welcome!</string>
    <string name="placement_heading">Placing, requesting or sponsoring new sensors</string>
    <string name="placement_text1">Are you interested in placing a sensor yourself? Do you know a good potential location? Or would you like to sponsor one or more sensors to support this project? In that case, please contact us at gfroerli@coredump.ch!</string>

    <!-- Location -->
    <string name="locate_me">Show my location</string>
    <string name="location_unavailable">Could not determine your location</string>
    <string name="location_permission_denied">Without location permission, your location cannot be shown</string>

    <!-- Action bar menu -->
    <string name="action_about_this_app">About this app</string>
    <string name="action_refresh_all">Reload all data</string>

    <!-- Error messages -->
    <string name="fetching_sensor_data_failed">Could not fetch sensors (HTTP %1$d).\nIf the problem persists, please contact %2$s.</string>
    <string name="fetching_data_failed">Fetching %1$s failed. Please check your internet connection.</string>
    <!-- Shown in "fetching data failed" error message -->
    <string name="data_sensor_details">sensor details</string>
    <!-- Shown in "fetching data failed" error message -->
    <string name="data_sensors">sensors</string>
    <!-- Shown in "fetching data failed" error message -->
    <string name="data_sponsor">sponsor</string>
    <!-- Shown in "fetching data failed" error message -->
    <string name="data_sponsors">sponsors</string>
    <!-- Shown in "fetching data failed" error message -->
    <string name="data_measurements">measurements</string>

    <!-- Android Auto -->
    <string name="car_sensor_list_title">Water Temperatures</string>
    <string name="car_no_sensors">No sensors with recent measurements found</string>
    <string name="car_location_permission_hint">Please allow access to your location on your phone</string>
    <string name="car_location_permission_denied">No location permission</string>
    <string name="car_location_permission_denied_short">Sensors cannot be sorted by distance</string>
    <string name="car_location_permission_denied_text">Grant the location permission on your phone to sort sensors by distance.</string>
    <string name="car_more_sensors">Not all sensors shown</string>
    <string name="car_more_sensors_short">%1$d of %2$d sensors</string>
    <string name="car_more_sensors_text">Only the first %1$d of %2$d sensors are shown. The phone app shows all of them.</string>
    <string name="car_error_loading_sensors">Could not load sensors. Please check your internet connection.</string>
    <string name="car_action_retry">Retry</string>
    <string name="car_action_navigate">Navigate</string>
</resources>
