<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.AboutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <com.actinarium.aligned.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/about_project_heading"/>

            <com.actinarium.aligned.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                app:leading="@dimen/body1Leading"
                app:firstLineLeading="@dimen/body1Leading"
                android:text="@string/about_project_text1"/>

            <com.actinarium.aligned.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                app:leading="@dimen/body1Leading"
                app:firstLineLeading="@dimen/body1Leading"
                android:text="@string/about_project_text2"/>

            <com.actinarium.aligned.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                app:leading="@dimen/body1Leading"
                app:firstLineLeading="@dimen/body1Leading"
                android:text="@string/about_project_text3"/>


            <com.actinarium.aligned.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Headline"
                app:firstLineLeading="@dimen/headlineLeading"
                android:text="@string/about_us_heading"/>

            <com.actinarium.aligned.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                app:leading="@dimen/body1Leading"
                app:firstLineLeading="@dimen/body1Leading"
                android:text="@string/about_us_text1"/>

            <com.actinarium.aligned.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                app:leading="@dimen/body1Leading"
                app:firstLineLeading="@dimen/body1Leading"
                android:autoLink="web"
                android:text="@string/about_us_text2"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>